# hx_config_manager

./: .editorconfig  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake  FindLibYAML.cmake  FindMXML.cmake
docs/: BUG_MEMORY_LEAK_AUDIT.md
examples/: CMakeLists.txt  basic_usage.c  config_merge.c  config_watcher.c  multi_format.c  server_config.c
include/: cm_internal.h  config_manager.h
src/: cm_core.c  cm_dispatch.c  cm_env.c  cm_ini.c  cm_json.c  cm_toml.c  cm_xml.c  cm_yaml.c
tests/: CMakeLists.txt  test_core.c  test_env.c  test_ini.c  test_json.c  test_merge.c  test_toml.c  test_xml.c  test_yaml.c
