cmake_minimum_required(VERSION 3.16)

project(config_manager
    VERSION 1.0.0
    DESCRIPTION "Multi-format configuration management library (Pure C)"
    LANGUAGES C
)

# ─────────────────────────────────────────────────────────────────────
# C standard & compiler options
# ─────────────────────────────────────────────────────────────────────
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

# Export compile commands for IDEs / clangd
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Platform detection
if(WIN32)
    add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
endif()

# ─────────────────────────────────────────────────────────────────────
# Options
# ─────────────────────────────────────────────────────────────────────
option(CM_BUILD_TESTS    "Build tests"          ON)
option(CM_BUILD_EXAMPLES "Build examples"       ON)
option(CM_ENABLE_JSON    "Enable JSON support"  ON)
option(CM_ENABLE_YAML    "Enable YAML support"  ON)
option(CM_ENABLE_XML     "Enable XML support"   ON)
option(CM_ENABLE_INI     "Enable INI support"   ON)
option(CM_ENABLE_TOML    "Enable TOML support"  ON)
option(CM_ENABLE_ENV     "Enable ENV support"   ON)

# ─────────────────────────────────────────────────────────────────────
# FetchContent – third-party libraries
# ─────────────────────────────────────────────────────────────────────
include(FetchContent)

# ── cJSON (JSON) ──────────────────────────────────────────────────────
if(CM_ENABLE_JSON)
    FetchContent_Declare(
        cjson
        GIT_REPOSITORY https://github.com/DaveGamble/cJSON.git
        GIT_TAG        v1.7.18
        GIT_SHALLOW    TRUE
    )
    set(ENABLE_CJSON_TEST    OFF CACHE BOOL "" FORCE)
    set(BUILD_SHARED_LIBS    OFF CACHE BOOL "" FORCE)
    set(ENABLE_CJSON_UTILS   OFF CACHE BOOL "" FORCE)
    FetchContent_MakeAvailable(cjson)
endif()

# ── libyaml (YAML) ───────────────────────────────────────────────────
if(CM_ENABLE_YAML)
    FetchContent_Declare(
        libyaml
        GIT_REPOSITORY https://github.com/yaml/libyaml.git
        GIT_TAG        0.2.5
        GIT_SHALLOW    TRUE
    )
    set(BUILD_TESTING OFF CACHE BOOL "" FORCE)
    FetchContent_MakeAvailable(libyaml)
endif()

# ── Mini-XML (XML) ───────────────────────────────────────────────────
if(CM_ENABLE_XML)
    FetchContent_Declare(
        mxml
        GIT_REPOSITORY https://github.com/michaelrsweet/mxml.git
        GIT_TAG        v4.0.3
        GIT_SHALLOW    TRUE
    )
    FetchContent_MakeAvailable(mxml)

    # mxml v4 has no CMakeLists.txt (autotools) — build it manually
    if(NOT TARGET mxml)
        file(WRITE ${mxml_BINARY_DIR}/config.h
"// Generated by CMake for MSVC / Windows builds
#ifndef MXML_CONFIG_H
#define MXML_CONFIG_H
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <stdarg.h>
#include <ctype.h>

#define MXML_VERSION \"4.0.3\"

#ifdef _MSC_VER
#  define inline __inline
#else
#  define inline
#endif

#define HAVE_LONG_LONG_INT
/* #undef HAVE_PTHREAD_H */

#endif /* !MXML_CONFIG_H */
")
        add_library(mxml STATIC
            ${mxml_SOURCE_DIR}/mxml-attr.c
            ${mxml_SOURCE_DIR}/mxml-file.c
            ${mxml_SOURCE_DIR}/mxml-get.c
            ${mxml_SOURCE_DIR}/mxml-index.c
            ${mxml_SOURCE_DIR}/mxml-node.c
            ${mxml_SOURCE_DIR}/mxml-options.c
            ${mxml_SOURCE_DIR}/mxml-private.c
            ${mxml_SOURCE_DIR}/mxml-search.c
            ${mxml_SOURCE_DIR}/mxml-set.c
        )
        target_include_directories(mxml PUBLIC
            ${mxml_SOURCE_DIR}
            ${mxml_BINARY_DIR}
        )
        if(WIN32)
            target_compile_definitions(mxml PRIVATE _CRT_SECURE_NO_WARNINGS)
        endif()
    endif()
endif()

# ── inih (INI) ───────────────────────────────────────────────────────
if(CM_ENABLE_INI)
    FetchContent_Declare(
        inih
        GIT_REPOSITORY https://github.com/benhoyt/inih.git
        GIT_TAG        r58
        GIT_SHALLOW    TRUE
    )
    FetchContent_MakeAvailable(inih)

    # inih has no CMakeLists – build it manually as an interface
    if(NOT TARGET inih::inih)
        add_library(inih_lib STATIC
            ${inih_SOURCE_DIR}/ini.c
        )
        target_include_directories(inih_lib PUBLIC
            ${inih_SOURCE_DIR}
        )
        add_library(inih::inih ALIAS inih_lib)
    endif()
endif()

# ── tomlc99 (TOML) ───────────────────────────────────────────────────
if(CM_ENABLE_TOML)
    FetchContent_Declare(
        tomlc99
        GIT_REPOSITORY https://github.com/cktan/tomlc99.git
        GIT_TAG        master
        GIT_SHALLOW    TRUE
    )
    FetchContent_MakeAvailable(tomlc99)

    if(NOT TARGET tomlc99::tomlc99)
        add_library(tomlc99_lib STATIC
            ${tomlc99_SOURCE_DIR}/toml.c
        )
        target_include_directories(tomlc99_lib PUBLIC
            ${tomlc99_SOURCE_DIR}
        )
        add_library(tomlc99::tomlc99 ALIAS tomlc99_lib)
    endif()
endif()

# ─────────────────────────────────────────────────────────────────────
# config_manager library
# ─────────────────────────────────────────────────────────────────────
set(CM_SOURCES
    src/cm_core.c
    src/cm_dispatch.c
)
set(CM_DEFINES "")

if(CM_ENABLE_JSON)
    list(APPEND CM_SOURCES src/cm_json.c)
    list(APPEND CM_DEFINES CM_HAVE_JSON)
endif()

if(CM_ENABLE_YAML)
    list(APPEND CM_SOURCES src/cm_yaml.c)
    list(APPEND CM_DEFINES CM_HAVE_YAML)
endif()

if(CM_ENABLE_XML)
    list(APPEND CM_SOURCES src/cm_xml.c)
    list(APPEND CM_DEFINES CM_HAVE_XML)
endif()

if(CM_ENABLE_INI)
    list(APPEND CM_SOURCES src/cm_ini.c)
    list(APPEND CM_DEFINES CM_HAVE_INI)
endif()

if(CM_ENABLE_TOML)
    list(APPEND CM_SOURCES src/cm_toml.c)
    list(APPEND CM_DEFINES CM_HAVE_TOML)
endif()

if(CM_ENABLE_ENV)
    list(APPEND CM_SOURCES src/cm_env.c)
    list(APPEND CM_DEFINES CM_HAVE_ENV)
endif()

add_library(config_manager STATIC ${CM_SOURCES})

target_compile_definitions(config_manager PRIVATE ${CM_DEFINES})

target_include_directories(config_manager
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
)

# Link third-party libraries
if(CM_ENABLE_JSON)
    target_link_libraries(config_manager PUBLIC cjson)
    target_include_directories(config_manager PRIVATE
        ${cjson_SOURCE_DIR}
    )
endif()

if(CM_ENABLE_YAML)
    # libyaml target name may vary by version
    if(TARGET yaml)
        target_link_libraries(config_manager PUBLIC yaml)
    elseif(TARGET yaml_static)
        target_link_libraries(config_manager PUBLIC yaml_static)
    else()
        target_link_libraries(config_manager PUBLIC libyaml)
    endif()
    target_include_directories(config_manager PRIVATE
        ${libyaml_SOURCE_DIR}/include
    )
endif()

if(CM_ENABLE_XML)
    if(TARGET mxml)
        target_link_libraries(config_manager PUBLIC mxml)
    elseif(TARGET mxml_static)
        target_link_libraries(config_manager PUBLIC mxml_static)
    endif()
    target_include_directories(config_manager PRIVATE
        ${mxml_SOURCE_DIR}
        ${mxml_BINARY_DIR}
    )
endif()

if(CM_ENABLE_INI)
    target_link_libraries(config_manager PUBLIC inih::inih)
endif()

if(CM_ENABLE_TOML)
    target_link_libraries(config_manager PUBLIC tomlc99::tomlc99)
endif()

# strcasecmp → _stricmp on Windows
if(WIN32)
    target_compile_definitions(config_manager PUBLIC "strcasecmp=_stricmp")
endif()

# Warnings
if(MSVC)
    target_compile_options(config_manager PUBLIC /utf-8 PRIVATE /W4)
else()
    target_compile_options(config_manager PRIVATE -Wall -Wextra -Wpedantic)
endif()

# ─────────────────────────────────────────────────────────────────────
# Tests
# ─────────────────────────────────────────────────────────────────────
if(CM_BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()

# ─────────────────────────────────────────────────────────────────────
# Examples
# ─────────────────────────────────────────────────────────────────────
if(CM_BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()

# ─────────────────────────────────────────────────────────────────────
# Install
# ─────────────────────────────────────────────────────────────────────
include(GNUInstallDirs)

install(TARGETS config_manager
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(FILES
    include/config_manager.h
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

# ─────────────────────────────────────────────────────────────────────
# Summary
# ─────────────────────────────────────────────────────────────────────
message(STATUS "─────────────────────────────────────")
message(STATUS "  config_manager ${PROJECT_VERSION}")
message(STATUS "  JSON  : ${CM_ENABLE_JSON}")
message(STATUS "  YAML  : ${CM_ENABLE_YAML}")
message(STATUS "  XML   : ${CM_ENABLE_XML}")
message(STATUS "  INI   : ${CM_ENABLE_INI}")
message(STATUS "  TOML  : ${CM_ENABLE_TOML}")
message(STATUS "  ENV   : ${CM_ENABLE_ENV}")
message(STATUS "  Tests : ${CM_BUILD_TESTS}")
message(STATUS "─────────────────────────────────────")
